Client: Shared: Guidance: fixed clipped element position

--- a/packages/shared/components/guidance/sub-components/Guid.module.scss
+++ b/packages/shared/components/guidance/sub-components/Guid.module.scss
@@ -108,6 +108,10 @@
   position: absolute;
   border-radius: 7px;
   backdrop-filter: var(--backdrop-filter-value);
+
+  &.smallBorderRadius {
+    border-radius: 4px;
+  }
 }
 
 .guidBackdrop {
